# RectsinGrid

./: 5x5.py  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
src/rectgrid/: README.md  colors.py  counter.py  custom_exceptions.py  main.py  rect_grid.py  settings.py  utils.py
tests/: test_color.py  test_counter.py  test_grid.py  test_utils.py
