[metadata]
name = RectsinGrid
version = 0.1.0
description = Cuántos rectángulos caben en una cuadrícula
author = Sergio Tejedor Moreno
author_email = tejedor.moreno@gmail.com
license = Apache
license_file = LICENSE
platforms = linux, win32

[options]
packages =
    rectgrid
install_requires =
    pygame
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[flake8]
max-line-length = 200

[options.package_data]
rectgrid = py.typed